@@ -7,34 +7,34 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.3 (gritter) 7/16/06";
+	"@(#)/usr/ucb/otfdump.sl	7.4 (gritter) 7/17/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.3 (gritter) 7/16/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.3 (gritter) 7/16/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.4 (gritter) 7/17/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.4 (gritter) 7/17/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.3 (gritter) 7/16/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.4 (gritter) 7/17/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.3 (gritter) 7/16/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.4 (gritter) 7/17/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.3";
+const char revision[] = "7.4";
 /* SLIST */
 /*
-ext.h: * Sccsid @(#)ext.h	1.54 (gritter) 7/16/06
+ext.h: * Sccsid @(#)ext.h	1.55 (gritter) 7/17/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 n1.c: * Sccsid @(#)n1.c	1.83 (gritter) 7/16/06
 n2.c: * Sccsid @(#)n2.c	1.22 (gritter) 7/3/06
-n3.c: * Sccsid @(#)n3.c	1.102 (gritter) 7/11/06
-n4.c: * Sccsid @(#)n4.c	1.33 (gritter) 7/11/06
-n5.c: * Sccsid @(#)n5.c	1.52 (gritter) 7/9/06
-n7.c: * Sccsid @(#)n7.c	1.74 (gritter) 7/16/06
+n3.c: * Sccsid @(#)n3.c	1.103 (gritter) 7/17/06
+n4.c: * Sccsid @(#)n4.c	1.34 (gritter) 7/17/06
+n5.c: * Sccsid @(#)n5.c	1.53 (gritter) 7/17/06
+n7.c: * Sccsid @(#)n7.c	1.75 (gritter) 7/17/06
 n8.c: * Sccsid @(#)n8.c	1.28 (gritter) 7/4/06
 n9.c: * Sccsid @(#)n9.c	1.46 (gritter) 7/3/06
-ni.c: * Sccsid @(#)ni.c	1.30 (gritter) 7/11/06
+ni.c: * Sccsid @(#)ni.c	1.31 (gritter) 7/17/06
 nii.c: * Sccsid @(#)nii.c	1.35 (gritter) 7/11/06
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
-tdef.h: * Sccsid @(#)tdef.h	1.92 (gritter) 7/11/06
-nroff.d/n10.c: * Sccsid @(#)n10.c	1.25 (gritter) 7/9/06
-nroff.d/n6.c: * Sccsid @(#)n6.c	1.38 (gritter) 7/9/06
+tdef.h: * Sccsid @(#)tdef.h	1.93 (gritter) 7/17/06
+nroff.d/n10.c: * Sccsid @(#)n10.c	1.26 (gritter) 7/17/06
+nroff.d/n6.c: * Sccsid @(#)n6.c	1.39 (gritter) 7/17/06
 nroff.d/pt.h: *	Sccsid @(#)pt.h	1.39 (gritter) 7/11/06
 nroff.d/tw.h: * Sccsid @(#)tw.h	1.6 (gritter) 4/25/06
 troff.d/afm.c: * Sccsid @(#)afm.c	1.56 (gritter) 7/9/06
@@ -45,8 +45,8 @@ troff.d/makedev.c: * Sccsid @(#)makedev.c	1.13 (gritter) 4/30/06
 troff.d/otf.c: * Sccsid @(#)otf.c	1.56 (gritter) 6/24/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.15 (gritter) 3/16/06
 troff.d/pt.h: * Sccsid @(#)pt.h	1.50 (gritter) 7/11/06
-troff.d/t10.c: * Sccsid @(#)t10.c	1.75 (gritter) 7/11/06
-troff.d/t6.c: * Sccsid @(#)t6.c	1.155 (gritter) 7/12/06
+troff.d/t10.c: * Sccsid @(#)t10.c	1.76 (gritter) 7/17/06
+troff.d/t6.c: * Sccsid @(#)t6.c	1.156 (gritter) 7/17/06
 troff.d/troff.h: * Sccsid @(#)troff.h	1.25 (gritter) 7/11/06
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.13 (gritter) 2/16/06
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.2 (gritter) 12/22/05
